# SPDX-FileCopyrightText: 2022 Shun Sakai
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "hf"
version = "0.3.6"
authors = ["Shun Sakai <sorairolake@protonmail.ch>"]
edition = "2021"
rust-version = "1.74.0"
description = "Cross-platform hidden file library and utility"
documentation = "https://docs.rs/hf"
readme = "README.md"
homepage = "https://sorairolake.github.io/hf/"
repository = "https://github.com/sorairolake/hf"
license = "Apache-2.0 OR MIT"
keywords = ["hidden"]
categories = ["command-line-utilities", "filesystem"]
include = ["/LICENSES", "/README.md", "/src"]

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hf"
required-features = ["application"]

[dependencies]
anyhow = { version = "1.0.92", optional = true }
clap = { version = "4.5.20", features = ["derive", "wrap_help"], optional = true }
clap_complete = { version = "4.5.36", optional = true }
clap_complete_nushell = { version = "4.5.4", optional = true }
log = { version = "0.4.22", optional = true }
simplelog = { version = "0.12.2", optional = true }
sysexits = { version = "0.8.4", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
tempfile = "3.13.0"

[features]
default = ["application"]
application = [
  "dep:anyhow",
  "dep:clap",
  "dep:clap_complete",
  "dep:clap_complete_nushell",
  "dep:log",
  "dep:simplelog",
  "dep:sysexits",
]

[lints.clippy]
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[lints.rust]
missing_debug_implementations = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
