# SPDX-FileCopyrightText: 2022 Shun Sakai
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "hf"
version = "0.4.0"
authors = ["Shun Sakai <sorairolake@protonmail.ch>"]
edition = "2024"
rust-version = "1.85.0"
description = "Cross-platform hidden file library and utility"
documentation = "https://docs.rs/hf"
readme = "README.md"
homepage = "https://sorairolake.github.io/hf/"
repository = "https://github.com/sorairolake/hf"
license = "Apache-2.0 OR MIT"
keywords = ["hidden"]
categories = ["command-line-utilities", "filesystem"]
include = ["/LICENSES", "/README.md", "/src"]

[package.metadata.docs.rs]
all-features = true

[[bin]]
name = "hf"
required-features = ["application"]

[dependencies]
anyhow = { version = "1.0.97", optional = true }
clap = { version = "4.5.34", features = ["derive", "wrap_help"], optional = true }
clap_complete = { version = "4.5.47", optional = true }
clap_complete_nushell = { version = "4.5.5", optional = true }
log = { version = "0.4.27", optional = true }
simplelog = { version = "0.12.2", optional = true }
sysexits = { version = "0.9.0", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.19.1"

[features]
default = ["application"]
application = [
  "dep:anyhow",
  "dep:clap",
  "dep:clap_complete",
  "dep:clap_complete_nushell",
  "dep:log",
  "dep:simplelog",
  "dep:sysexits",
]

[lints.clippy]
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[lints.rust]
missing_debug_implementations = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
